Scaffoled DataBase Context Using Entity Framework and DbFirst Approach created DbContext and DbModels

--- a/.gitignore
+++ b/.gitignore
@@ -475,3 +475,5 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+/PersonalTracking.WPF/appsettings.json
+/PersonalTracking.WPF/DataBase/PersonalTrackingDbContext.cs
